  Thus a user can now to bar <- chon(foo); plot(bar) 
- Help revised considerably


File: read.crn.R
-------------------------
- Added class "crn" to output object.

File: cana157.rda
-------------------------
- Added class "crn" to object.

File: detrend.R and detrend.series.R
------------
- Added an Ar detrend method. Revised plotting in detrend.series

File: powt.R
------------
- Originally, the transformed series were rescaled to their
  original mean and variance, which can lead to negative values for
  the (supposedly) raw tree-ring data.  This is not necessary, and
  has been removed now.

File: rwl.stats
-------------------------
- Added an S3 summary method for rwl objects so that summary(foo.rwl)
  calls rwl.stats(foo.rwl)

Folder: vignettes
-------------------------
- Added a vignettes folder

File: dplR.sty
-------------------------
- Very basic sty file

File: intro-dplR.Rnw
-------------------------
- A vignette to intriduce dplR

File: corr.rwl.seg.R
--------------------
- Removed yr.range() function in favor of yr.range() in helpers.R.
  They are identical for all practical purposes.

File: interseries.cor.R
-------------------------
- New function interseries.cor.

File: read.compact.R
-------------------------
- Added class "rwl" to output object.

File: read.fh.R
-------------------------
- Added class "rwl" to output object.

File: read.tridas.R
-------------------------
- Added class "rwl" to output object $results.

File: read.tucson.R
-------------------------
- Added class "rwl" to output object.

File: anos1.rda
-------------------------
- Added class "rwl" to object.

File: ca533.rda
-------------------------
- Added class "rwl" to object.

File: co021.rda
-------------------------
- Added class "rwl" to object.

File: gp.rwl.rda
-------------------------
- Added class "rwl" to object.


File: rwl.plot.R
-------------------------
- New wrapper to plot rwl objects.

File: spag.plot.R
-------------------------
- Cosmetic changes to plot.
