@@ -1,3 +1,10 @@
+o[mvkorpel]  Mikko, I started working on the verbose option for detrend.series. 
+   There are some things to take care of in there that you can likely do
+   better than I can.
+-  What is the best way to extract the parameters with ModNegExp?
+-  In detrend() the call to detrend.series doesn't appear to pass the names
+   in to detrend.series when dopar is invoked. Is that right?
+
 *  Write more vignettes:
 -  Crossdating
 -  Spectral and wavelets
@@ -7,15 +14,6 @@
    to specify which correlation method (e.g., spearman). Note that this is 
    implemented in interseries.cor - but will have to do this throughout. 
    The default should be spearman.
-
-*  In detrend.series there should be a verbose option that writes 
-   how a series is handled including the parameters of the model.
-- Things to keep track of (not in order): 
-    1. Number of zero values and where they are are (what years). 
-    2. What method is being used
-    3. For the method the relevant parameters. E.g., at params of an nls model,
-       ar coef, etc.
-    4. What else?
 
 * Decide when to use class('rwl') in functions dealing with rwl objects.
   Other than the plot and summary S3Method for rwl, are there cases when 
